feat: next config

--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@
 
 # Site
 title: 罗列的博客
-subtitle: 这次罗列能坚持多久呢？？用于记录罗列工作生活中的记录，涉及语言包括C/C++、Python、JavaScript，具体内容有编译器体系结构、前端、数据分析和一些生活分享，建立起来后会做成包含i18n的版本
+subtitle: 这是一个罗列用于记录各种笔记的地方
 description: SEO内容
 keywords: 罗列 博客
 author: Luo Lie
